tests/lean/autoBoundPostponeLoop.lean.expected.out
autoBoundPostponeLoop.lean:5:12-5:18: error: invalid `▸` notation, argument
  h
has type
  ?m
equality expected

Hint: This error occurred after the identifiers `α`, `β`, and `h` had been identified as free variables and automatically given implicit bindings. Are those identifiers all supposed to be implicitly bound? Automatic implicit binding can sometimes occur due to typos or missing `import` or `open` statements, and this may cause unexpected errors.
